[package]
name = "zerotrust"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["proxy", "security"]
description = "Secure app proxy"
repository = "https://lab.themackabu.dev/self/zerotrust"

[dependencies]
url = "2.5.0"
toml = "0.8.8"
tera = "1.19.1"
clap = "4.4.18"
colored = "2.1.0"
bcrypt = "0.15.0"
tracing = "0.1.40"
futures = "0.3.30"
macros-rs = "0.5.2"
termcolor = "1.4.1"
once_cell = "1.19.0"
mime_guess = "2.0.4"
actix-files = "0.6.5"
tokio-util = "0.7.10"
serde_json = "1.0.113"
jsonwebtoken = "9.2.0"
derive_more = "0.99.17"
futures-util = "0.3.30"
actix-service = "2.0.2"
diesel_migrations = "2.1.0"
tracing-subscriber = "0.3.18"
clap-verbosity-flag = "2.1.2"
notify-debouncer-mini = "0.4.1"
actix-web-static-files = "4.0.1"
tracing-bunyan-formatter = "0.3.9"

uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4.33", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
awc = { version = "3.3.0", features = ["rustls-0_21"] }
toml_edit = { version = "0.21.1", features = ["serde"] }
include_dir = { version = "0.7.3", features = ["metadata"] }
actix-web = { version = "4.4.1", features = ["secure-cookies"] }
diesel = { version = "2.1.4", features = ["r2d2", "sqlite", "chrono"] }
reqwest = { version = "0.11.23", default-features = false, features = ["stream", "rustls-tls"] }
parking_lot = "0.12.1"

[build-dependencies]
chrono = "0.4.33"
