[package]
name = "zerotrust"
version = "0.2.1"
edition = "2021"
license = "MIT"
keywords = ["proxy", "security"]
description = "Secure app proxy"
repository = "https://lab.themackabu.dev/self/zerotrust"

[dependencies]
url = "2.5.0"
toml = "0.8.8"
tera = "1.19.1"
clap = "4.4.18"
colored = "2.1.0"
bcrypt = "0.15.0"
anyhow = "1.0.79"
tracing = "0.1.40"
futures = "0.3.30"
macros-rs = "0.5.2"
termcolor = "1.4.1"
once_cell = "1.19.0"
mime_guess = "2.0.4"
actix-files = "0.6.5"
tokio-util = "0.7.10"
serde_json = "1.0.113"
jsonwebtoken = "9.2.0"
parking_lot = "0.12.1"
derive_more = "0.99.17"
futures-util = "0.3.30"
actix-service = "2.0.2"
diesel_migrations = "2.1.0"
tracing-subscriber = "0.3.18"
clap-verbosity-flag = "2.1.2"
notify-debouncer-mini = "0.4.1"
actix-web-static-files = "4.0.1"
tracing-bunyan-formatter = "0.3.9"

[dependencies.actix-web]
features = ["secure-cookies"]
version = "4.4.1"

[dependencies.awc]
features = ["rustls-0_21"]
version = "3.3.0"

[dependencies.chrono]
features = ["serde"]
version = "0.4.33"

[dependencies.diesel]
features = ["r2d2", "postgres", "chrono"]
version = "2.1.4"

[dependencies.include_dir]
features = ["metadata"]
version = "0.7.3"

[dependencies.reqwest]
default-features = false
features = ["stream", "rustls-tls"]
version = "0.11.23"

[dependencies.serde]
features = ["derive"]
version = "1.0.196"

[dependencies.tokio]
features = ["full"]
version = "1.35.1"

[dependencies.toml_edit]
features = ["serde"]
version = "0.21.1"

[dependencies.uuid]
features = ["v4"]
version = "1.7.0"

[build-dependencies]
chrono = "0.4.33"
